# ai-pr-reviewer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  action.yml  pyproject.toml  review.py
.github/workflows/: move-major-tag.yml  test.yml
badges/: coverage-badge.json  test-badge.json
docs/: CODE_ROAST_REPORT.md
reviewer/: __init__.py  config.py  exceptions.py  filters.py  github_client.py  prompt.py  providers.py
tests/: test_config.py  test_filters.py  test_github_client.py  test_prompt.py  test_providers.py  test_review.py
